marvelus_examples/tests/neg/consts01.zls
(* ==== NEG 1: Wrong head equality ==== *)
let bad_head : {v:int | v = 6} = 5    (* should FAIL *)

let hybrid main () = ()